--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,11 +5,13 @@
 [buildout]
 parts = scripts
 eggs = tensorflow.examples
+       gridtk
 
 extensions = bob.buildout
              mr.developer
 auto-checkout = *
 develop = src/bob.db.mnist
+          src/gridtk
           .
 
 ; options for bob.buildout
@@ -20,6 +22,7 @@ newest = false
 
 [sources]
 bob.db.mnist = git git@github.com:tiagofrepereira2012/bob.db.mnist
+gridtk = git git@github.com:bioidiap/gridtk
 
 
 [scripts]
